[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memind"
dynamic = ["version"]
description = "Official Python client for the Memind memory engine API"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "OpenMemind", email = "dev@openmemind.ai" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0,<1",
    "pydantic>=2.1.0,<3",
]

[project.urls]
Homepage = "https://github.com/openmemind/memind"
Repository = "https://github.com/openmemind/memind"
Issues = "https://github.com/openmemind/memind/issues"

[tool.hatch.version]
path = "src/memind/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/memind"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "ruff",
    "mypy",
    "build>=1.2",
    "twine>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
